<resources>
    <string name="app_name">BT-Configurator</string>
    <string name="title_bluetooth">Bluetooth</string>
    <string name="title_configuration">Конфигурация</string>
    <string name="title_console">Консоль</string>
    <string name="textview">TextView</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bluetooth">Начало</string>
    <string name="switch_bt">Bluetooth</string>
    <string name="btn_send_command">Отправить</string>
    <string name="tv_command_line">Информация из устройства</string>
    <string name="id">ID терминала</string>
    <string name="etCommandLine">id?</string>
    <string name="sw_bluetooth">Bluetooth</string>
    <string name="version_po">Версия ПО терминала</string>
    <string name="restart">Рестарт</string>
    <string name="default_settings">Заводские настройки</string>
    <string name="tv_version_of_termainal">Версия ПО терминала</string>
    <string name="tv_config_probleskator">Настройка проблескатора</string>
    <string name="tv_diod_light_mode">Режим свечения светодиода</string>
    <string name="tv_luminescence">Яркость свечения</string>
    <string name="tv_illumination_level">Пороговый уровень освещенности, [лк]</string>
    <string name="tv_longitude">Долгота</string>
    <string name="tv_current_coordinates">Текущие координаты</string>
    <string name="tv_latitude">Широта</string>
    <string name="btn_request_coordinates">Запросить координаты</string>
    <string-array name="config_list">
        <item>Буй</item>
        <item>Основные</item>
        <item>Навигация</item>
    </string-array>

</resources>
