<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        android:id="@+id/frag_config_buoy"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/ll_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/tvId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:freezesText="false"
                android:gravity="center_vertical"
                android:paddingBottom="0dp"
                android:text="@string/id"
                android:textAllCaps="false"
                android:textAppearance="@android:style/TextAppearance.Widget.TextView"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="100dp" />
            <EditText
                android:id="@+id/et_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:ems="0"
                android:inputType="number"
                android:textAlignment="viewEnd"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_id">
            <TextView
                android:id="@+id/tvVersionPO"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:freezesText="false"
                android:gravity="center_vertical"
                android:paddingBottom="0dp"
                android:text="@string/tv_version_of_termainal"
                android:textAppearance="@android:style/TextAppearance.Widget.TextView"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="100dp" />
            <EditText
                android:text="@{configuration.versionTerminal}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:inputType="text"
                android:textAlignment="viewEnd"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_">
            <Button
                android:id="@+id/btn_restart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/restart"
                android:textAllCaps="false"
                android:textSize="16dp"
                tools:ignore="ButtonStyle"
                tools:layout_editor_absoluteX="288dp"
                tools:layout_editor_absoluteY="151dp" />
            <Button
                android:id="@+id/btn_default_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/default_settings"
                android:textAllCaps="false"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_restart"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
</android.support.constraint.ConstraintLayout>
